--- a/style/styles.css
+++ b/style/styles.css
@@ -1,11 +1,26 @@
 .cont0{
-border: 1px solid black;
+border-width: thin;
+border-color:#DDDDDD;
+border-style: solid;
 display: flex;
 flex-direction: column;
 align-items: center;
+width: 20%;
+margin-top: 40px;
+border-radius:5%;
 }   
 .logo{
     align-self: center;
     width:10%;
     margin-top: 25px;
+}
+body{
+    font-family: Arial,sans-serif;
+    }
+h4,h3{
+    font-weight: bold;
+    padding-bottom: 4px;
+}
+label{
+    font-family: Arial,sans-serif;
 }
