--- a/style/styles.css
+++ b/style/styles.css
@@ -24,3 +24,9 @@ h4,h3{
 label{
     font-family: Arial,sans-serif;
 }
+textarea{
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+}
